docs: add information in html file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html lang="en">
-    <head><title></title></head>
+    <head><title>Rsschool-cv-html</title></head>
     <body>
+        <header>
+            <h1>Natalya Podhaynova</h1>
+        </header>
+        <main>Skills</main>
         <footer></footer>
     </body>
     </html>
