--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     Hi, I am a Junior Front-end Developer. I like to do beautiful sites. My contacts:
                 </p>
                 <div class="hero_links">
-                  <a href="mailto:podgainova@gmail.com" class="hero_link"><i class='bx bxl-gmail'>podgainova@gmail.com</i></a>
-                  <a href="https://github.com/podhaynova" class="hero_link"><i class='bx bxl-github' >github: podhaynova</i></a>
+                  <div><a href="mailto:podgainova@gmail.com" class="hero_link">podgainova@gmail.com</a></div>
+                  <div><a href="https://github.com/podhaynova" class="hero_link">github: podhaynova</a></div>
                 </div>
             </div>
             <div class="hero_box">
