--- a/index.html
+++ b/index.html
@@ -11,46 +11,40 @@
 </head>
 <body>
     <header class="header">
-        <a class="header_logo logo" href="#">CV Podhaynova Natalya</a>
+      <a class="header_logo logo" href="#">CV Podhaynova Natalya</a>
     </header>
     <div class="hero">
-        <div class="container hero_container">
-            <div class="hero_about">
-                <h1 class="hero_title">
-                    Front-end Developer
-                </h1>
-                <h2 class="hero_subtitle">
-                    Natalya Podhaynova
-                </h2>
-                <p class="hero_description">
-                    Hi, I am a Junior Front-end Developer. I like to do beautiful sites. My contacts:
-                </p>
-                <div class="hero_links">
-                  <div><a href="mailto:podgainova@gmail.com" class="hero_link">podgainova@gmail.com</a></div>
-                  <div><a href="https://github.com/podhaynova" class="hero_link">github: podhaynova</a></div>
-                </div>
+      <div class="container hero_container">
+         <div class="hero_about">
+          <h1 class="hero_title">Front-end Developer</h1>
+          <h2 class="hero_subtitle">Natalya Podhaynova</h2>
+          <p class="hero_description">Hi, I am a Junior Front-end Developer. I like to do beautiful sites. My contacts:</p>
+            <div class="hero_links">
+              <div><a href="mailto:podgainova@gmail.com" class="hero_link">podgainova@gmail.com</a></div>
+              <div><a href="https://github.com/podhaynova" class="hero_link">github: podhaynova</a></div>
             </div>
+         </div>
             <div class="hero_box">
-                <img class="hero_box-img" src="images/podhaynova_small.png" alt="pic">
+              <img class="hero_box-img" src="images/podhaynova_small.png" alt="pic">
             </div>
         </div>
     </div>
-  <div class="cv">
+    <div class="cv">
       <h3>Experience</h3>
       <p>Having started my career as a manager I realized that I want to be more self educated in programming. </p>
-        <p>At first it was machine learning course from RS School, and now it is a Java script course.</p> 
-        <h3>Code example</h3>
-    <div>plt.figure(figsize=(16, 6)) </div>
-    <h3>Education</h3>
-  <ul>
-    <li>Kherson National Technical University</li>
-  <li>HTMLAcademy</li>
- <li>RS School java script course (in process…)</li>
-</ul>
+      <p>At first it was machine learning course from RS School, and now it is a Java script course.</p> 
+      <h3>Code example</h3>
+      <div>plt.figure(figsize=(16, 6)) </div>
+      <h3>Education</h3>
+     <ul>
+       <li>Kherson National Technical University</li>
+       <li>HTMLAcademy</li>
+       <li>RS School java script course (in process…)</li>
+    </ul>
       <h3>Skills</h3>
-    </section>
-  <div>HTML, CSS, Python, SQL, JavaScript</div>
+    <div>HTML, CSS, Python, SQL, JavaScript</div>
     <h3>Language:</h3>
-<div>Russian - Native, English - B2</div>
-</body>
+    <div>Russian - Native, English - B2</div>
+   </div>
+  </body>
 </html> 
